kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: melita
  labels:
    app: melita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: melita
  template:
    metadata:
      labels:
        app: melita
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: melita-persistent-storage
          persistentVolumeClaim:
            claimName: melita-pvc
      containers:
        - name: melita
          image: melita
          volumeMounts:
            - name: melita-persistent-storage
              mountPath: /pvc
          command:
            - gunicorn
            - melita.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 100m
            limits:
              memory: 400Mi
              cpu: 100m
        - name: melita-nginx
          image: nginx:alpine
          volumeMounts:
            - name: melita-persistent-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
