kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: melita
spec:
  selector:
    app: melita
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: melita-nginx
spec:
  selector:
    app: melita
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
