kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: max-body-size
spec:
  buffering:
    maxRequestBodyBytes: 10485760  # 10m
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://melitaproject.eu"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: melita
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: melita-max-body-size@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - melitaproject.eu
      secretName: melita-tls
  rules:
    - host: melitaproject.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: melita
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: melita-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: melita-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.melitaproject.eu
      secretName: melita-nginx-tls
  rules:
    - host: files.melitaproject.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: melita-nginx
                port:
                  number: 80
